Wed Dec 31 01:33:05 2003  Dave Thomas  <dave@pragprog.com>

	* array.c, error.c, eval.c, io.c, prec.c, range.c, re.c,
          string.c, time.c: Add RDoc for Kernel functions, and tidy.

Tue Dec 30 19:39:14 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_readline): should raise EOFError at the end of
	  files.  [ruby-dev:22458]

	* io.c (argf_read): should concatenate input files when length
	  argument is nil. [ruby-dev:22450]

	* io.c (argf_read): should update supplied string buffer (2nd
	  argument) even when IO#read is called multiple times.

	* io.c: should initialize lineno by zero. [ruby-dev:22460]

Tue Dec 30 12:30:30 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::find_symbol): If a
	  class and a method have the same name, finding Xxx.abc was trying
	  to find 'abc' in method 'Xxx', not class 'Xxx'.


Tue Dec 30 08:32:32 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_method):
	  Handle undoing nsting of yield parameters correctly for:

	    def each_entry(&b) Dir.foreach(@path) {|f| yield P.new(f) } end


Tue Dec 30 07:30:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/pathname.rb: Added documentation.

Mon Dec 29 20:08:17 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (GenericRequest#initialize): check if path
	  begins with '/'.

	* lib/net/http.rb: def m( arg ) -> def m(arg)

Mon Dec 29 12:51:02 2003  Dave Thomas  <dave@pragprog.com>

	* eval.c: Add RDoc for Kernel global functions.

Mon Dec 29 11:00:16 2003  Dave Thomas  <dave@pragprog.com>

	* array.c: Tidy up RDoc loose ends.

Mon Dec 29 05:05:51 2003  Dave Thomas  <dave@pragprog.com>

	* struct.c, random: Add RDoc comments

Mon Dec 29 02:25:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/optparse.rb: Improved documentation.

Mon Dec 29 02:20:54 2003  Dave Thomas  <dave@pragprog.com>

	* eval.c: Add RDoc for class Proc, Method, UnboundMethod
